syntax = "proto3";

package sso.common;

option go_package = "github.com/gamaops/mono-sso/pkg/idl/sso-common";

message ResponseStatus {
	message Error {
		string slug = 1;
		string message = 2;
	}
	repeated Error errors = 1;
}

message RequestSession {
	string access_token = 1;
}